Refactor logic into ALF, GRU, and LDR

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>⌬ Benzo v2</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" type="module" defer></script>
+    <link rel="stylesheet" href="css.css" />
+    <script src="gru.js" type="module" defer></script>
     </style>
 </head>
 
