--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>⌬ Benzo v2</title>
     <link rel="stylesheet" href="css.css" />
-    <script src="gru.js" type="module" defer></script>
+    <script src="ldr.js" type="module" defer></script>
     </style>
 </head>
 
